findutils (4.4.2-5) unstable; urgency=low

  * Fix config.(sub|guess) update, the relevant files are in build-aux/.
    Closes: #689620

 -- Andreas Metzler <ametzler@debian.org>  Thu, 04 Oct 2012 19:16:52 +0200

findutils (4.4.2-4) unstable; urgency=low

  * Use 3.0 (quilt) format.
  * 10_Fix29828-testsuite-FreeBSD.patch, pulled from 4.5 series. Fix testsuite
    deadlock on FreeBSD.

 -- Andreas Metzler <ametzler@debian.org>  Fri, 06 Jan 2012 10:40:28 +0100

findutils (4.4.2-3) unstable; urgency=low

  * Drop all dpatch related stuff.

 -- Andreas Metzler <ametzler@debian.org>  Sat, 31 Dec 2011 17:19:39 +0100

findutils (4.4.2-2) unstable; urgency=low

  * Use dh_installcron to install locate's cron script.
  * Stop suggesting slocate, it has been removed from the archive.
    Closes: #565653
  * Enable hardened build flags through dpkg-buildflags. (Thank's, Moritz
    Muehlenhoff). Closes: #653849
  * Drop dpatch build-dependency.

 -- Andreas Metzler <ametzler@debian.org>  Sat, 31 Dec 2011 16:21:15 +0100

findutils (4.4.2-1) unstable; urgency=low

  * debian/locate-cron.daily: Test if called by root. (Thank's, Michael Vogt).
    Closes: #526939
  * New upstream version.
    + find -prune now makes sure it has valid stat() information.
      Closes: #527584
    + Drop patches/10_typo_525263.dpatch, included upstream.

 -- Andreas Metzler <ametzler@debian.org>  Sat, 06 Jun 2009 16:56:11 +0200

findutils (4.4.1-1) unstable; urgency=low

  * New upstream maintenance release.
    + Drop 10_unnecessary_tempfile.dpatch, applied upstream.
    + Drops duplicate filesystem proc in PRUNEFS. Closes: #518120
    + Correct code for displaying \0 in find.1. Closes: #476218
    + Updates documentation for find -perm /mode. Closes: #478005
    + Fixes segfault if  -newerXY test was not followed by any argument.
      Closes: #496853
    
  * Standards-Version 3.8.1.
    + Add support for DEB_BUILD_OPTIONS=nocheck.
  * Use filter instead of findstring when checking for